@@ -41,7 +41,8 @@ gnulib_modules="
   buffer-lcm
   c-strcase
   c-strtod
-  c-strtold
+  cl-strtod
+  cl-strtold
   calloc-gnu
   canon-host
   canonicalize
