@@ -1,0 +1,2 @@
+#define LONG 1
+#include "cl-strtod.c"
