@@ -55,7 +55,7 @@
 #include <sys/types.h>
 
 #include "system.h"
-#include "c-strtod.h"
+#include "cl-strtod.h"
 #include "die.h"
 #include "error.h"
 #include "quote.h"
@@ -188,7 +188,7 @@ FUNC_NAME (char const *s)						 \
 
 STRTOX (intmax_t,    vstrtoimax, strtoimax (s, &end, 0))
 STRTOX (uintmax_t,   vstrtoumax, strtoumax (s, &end, 0))
-STRTOX (long double, vstrtold,   c_strtold (s, &end))
+STRTOX (long double, vstrtold,   cl_strtold (s, &end))
 
 /* Output a single-character \ escape.  */
 
